@@ -47,12 +47,22 @@
       
     <h3>Latest release</h3>
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.12/tomboy-0.12.2.tar.gz"
+      title="Source code of the latest stable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.12.2</a></div>
+
+    <h3>Past releases</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.12/tomboy-0.12.1.tar.gz"
+      title="Source code of the latest stable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.12.1</a></div>
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.12/tomboy-0.12.0.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
       Tomboy 0.12.0</a></div>
-
-    <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.10/tomboy-0.10.0.tar.gz"
       title="Source code of the latest stable release">
@@ -84,10 +94,21 @@
       <a href="./getinvolved.html">Get involved</a> page.</p>
       
     <h3>Latest release</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.2.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.13.2</a></div> 
 
-      <p>There is currently no separate development release.</p>
+      <!--<p>There is currently no separate development release.</p>-->
       
     <h3>Past releases</h3>
+      <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.1.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.13.1</a></div> 
+
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.3.tar.gz"
       title="Source code of the latest unstable release">
