@@ -71,6 +71,15 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>December 17, 2008</h3>
+   	      <b>Stable</b> version 0.12.2 released!  New features since
+   	      version 0.12.0 include:
+   	      <ul>
+   	        <li>Fix bug that could cause notes to be mistakenly deleted during synchronization.</li>
+   	        <li>Build fix for older gnome-sharp releases.</li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>September 22, 2008</h3>
    	      <b>Stable</b> version 0.12.0 released!  New features since previous stable
    	      version include:
