@@ -1,3 +1,8 @@
+2008-12-17  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.12.2 release.
+	* download.html: Ditto.
+
 2008-09-22  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Linkify "Tasque".
